--- a/distrib/OptionsRus.lng
+++ b/distrib/OptionsRus.lng
@@ -1,15 +1,10 @@
 ﻿.Language=Russian,Russian (Русский)
 
 "Ассистент по Chromium C++ стилю"
+"&Настройка"
 
-"&Подсветить столбец лимита строки"
-"&Найти пробелы в конце строк"
-
-"Настрой&ка"
 "Настройка ассистента по Chromium C++"
 "Подсвечивать &столбец лимита строки"
 "&Лимит строки:"
-"Подсвечивать &пробелы в конце строк"
-
 "Сохранить"
 "Отмена"
