--- a/distrib/OptionsRus.lng
+++ b/distrib/OptionsRus.lng
@@ -4,7 +4,13 @@
 "&Настройка"
 
 "Настройка ассистента по Chromium C++"
-"Подсвечивать &столбец лимита строки"
-"&Лимит строки:"
+"Подсвечивать столбец лимита строки"
+"Подсвечивать столбец лимита строки"
+"Лимит строки:"
+"Цвет текста:         "
+"Цвет фона нормальный:"
+"Цвет фона, если табы:"
+"Файловые маски: "
+
 "Сохранить"
 "Отмена"
