v1: highlight column 80 in C++ source files with configurable colors;     configurable file masks of C++ source files to enable the features in.
No known issues.

--- a/distrib/OptionsEng.lng
+++ b/distrib/OptionsEng.lng
@@ -4,13 +4,12 @@
 "&Configure"
 
 "Configure Chromium C++ Assistant"
-"Highlight line-limit column"
+"File masks:"
 "Highlight line-limit column"
 "Line-limit:"
 "Forecolor:       "
-"Backcolor normal:"
+"Backcolor:       "
 "Backcolor if tab:"
-"File masks: "
 
 "Save"
 "Cancel"
