--- a/distrib/OptionsRus.lng
+++ b/distrib/OptionsRus.lng
@@ -4,13 +4,12 @@
 "&Настройка"
 
 "Настройка ассистента по Chromium C++"
-"Подсвечивать столбец лимита строки"
+"Маски файлов:"
 "Подсвечивать столбец лимита строки"
 "Лимит строки:"
 "Цвет текста:         "
-"Цвет фона нормальный:"
+"Цвет фона:           "
 "Цвет фона, если табы:"
-"Файловые маски: "
 
 "Сохранить"
 "Отмена"
