Add configuration for 'highlight whitespaces at line end' feature. Update help.

--- a/distrib/OptionsEng.lng
+++ b/distrib/OptionsEng.lng
@@ -11,5 +11,10 @@
 "Backcolor:       "
 "Backcolor if tab:"
 
+"Highlight whitespaces at line ends"
+"Backcolor:       "
+
 "Save"
 "Cancel"
+
+"/F1 for help/"
