--- a/distrib/OptionsRus.lng
+++ b/distrib/OptionsRus.lng
@@ -11,5 +11,10 @@
 "Цвет фона:           "
 "Цвет фона, если табы:"
 
+"Подсвечивать пробелы в конце строк"
+"Цвет фона:           "
+
 "Сохранить"
 "Отмена"
+
+"/F1 для помощи/"
