--- a/package/README
+++ b/package/README
@@ -2,13 +2,13 @@ To install the plugin please unpack the zip of your choice into
 Far Manager 3.0.5254 (or higher) installation folder. The typical path of 64bit
 Far Manager application is:
 
-C:\Program Files\Far Manager\Plugins\Chromium-CppStyle-Assistant\
+C:\Program Files\Far Manager\Plugins\CCAssistant\
 
 The same path is typical for 32bit Far Manager application installed on a 32bit
 Windows. But if 32bit Far Manager application is installed on a 64bit Windows,
 then the typical path is:
 
-C:\Program Files (x86)\Far Manager\Plugins\Chromium-CppStyle-Assistant\
+C:\Program Files (x86)\Far Manager\Plugins\CCAssistant\
 
 Please choose the plugin package file depending on your Far Manager installation
 bitness: ...x32.zip for 32bit Far, ...x64.zip for 64bit Far.
